# isito-project

./: pyproject.toml
.github/workflows/: docker-image.yml
app/backend/src/: backend.py
app/frontend/src/: frontend.py
apps/backend/: Dockerfile
apps/backend/src/: backend.py
apps/frontend/: Dockerfile
apps/frontend/src/: frontend.py
frontend/: Dockerfile
frontend/src/: frontend.py
k8s/: deployment.yaml  namespace.yaml
