[project]
name = "istio-test"
version = "0.1.0"
description = "Istio API and UI project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.3",
    "opentelemetry-api>=1.41.1",
    "opentelemetry-exporter-otlp>=1.41.1",
    "opentelemetry-instrumentation-flask>=0.62b1",
    "opentelemetry-instrumentation-requests>=0.62b1",
    "opentelemetry-sdk>=1.41.1",
    "requests>=2.33.1",
]
